--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2>Experience the Finest Coffee & Cuisine</h2>
-                <p>Handcrafted with love, served with passion. Discover our carefully curated menu in the heart of the
+                <h2 data-aos="zoom-in" data-aos-duration="800" >Experience the Finest Coffee & Cuisine</h2>
+                <p data-aos="zoom-in" data-aos-duration="800" >Handcrafted with love, served with passion. Discover our carefully curated menu in the heart of the
                     city.</p>
-                <a href="#menu" class="hero-btn">View Menu</a>
+                <a href="#menu" class="hero-btn" data-aos="zoom-in">View Menu</a>
             </div>
         </div>
     </section>
