--- a/login.html
+++ b/login.html
@@ -38,13 +38,17 @@
                 <a href="#" class="forgot-password">Forgot password?</a>
             </div>
 
-            <button type="submit" class="login-btn">Sign In</button>
+            <button type="submit" class="login-btn" onclick="return login()">Sign In</button>
         </form>
 
         <div class="signup-link">
             Don't have an account? <a href="signup.html">Create one here</a>
         </div>
     </div>
+
+
+
+    <script src="main.js"></script>
 </body>
 
 </html>
