--- a/signup.html
+++ b/signup.html
@@ -23,37 +23,39 @@
         <form class="signup-form">
 
             <div class="form-group">
-                <label for="fullName">Full Name</label>
-                <input type="text" id="fullName" name="fullName" required>
+                <label for="fullname">Full Name</label>
+                <input type="text" id="fullname" name="fullname">
             </div>
 
             <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
             </div>
 
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required>
+                <input type="tel" id="phone" name="phone">
             </div>
 
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password">
             </div>
 
             <div class="form-group">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" required>
+                <input type="password" id="confirmPassword" name="confirmPassword">
             </div>
 
-            <button type="submit" class="signup-btn">Create Account</button>
+            <button type="submit" class="signup-btn" onclick="return signup()">Create Account</button>
         </form>
 
         <div class="login-link">
             Already have an account? <a href="login.html">Login here</a>
         </div>
     </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
