--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2 data-aos="zoom-in" data-aos-duration="800" >Experience the Finest Coffee & Cuisine</h2>
-                <p data-aos="zoom-in" data-aos-duration="800" >Handcrafted with love, served with passion. Discover our carefully curated menu in the heart of the
+                <h2 data-aos="zoom-in" data-aos-duration="800">Experience the Finest Coffee & Cuisine</h2>
+                <p data-aos="zoom-in" data-aos-duration="800">Handcrafted with love, served with passion. Discover our
+                    carefully curated menu in the heart of the
                     city.</p>
                 <a href="#menu" class="hero-btn" data-aos="zoom-in">View Menu</a>
             </div>
@@ -70,7 +71,7 @@
                         <p>Rich espresso with steamed milk foam</p>
                         <div class="menu-item-footer">
                             <span class="price">₹120</span>
-                            <button class="add-btn">Add to Order</button>
+                            <button class="add-btn"><a href="/order.html">Order</a></button>
                         </div>
                     </div>
                 </div>
@@ -83,7 +84,7 @@
                         <p>Espresso with a lot of steamed milk</p>
                         <div class="menu-item-footer">
                             <span class="price">₹140</span>
-                            <button class="add-btn">Add to Order</button>
+                            <button class="add-btn"><a href="/order.html">Order</a></button>
                         </div>
                     </div>
                 </div>
@@ -96,7 +97,7 @@
                         <p>Sourdough bread with smashed avocado, cherry tomatoes</p>
                         <div class="menu-item-footer">
                             <span class="price">₹220</span>
-                            <button class="add-btn">Add to Order</button>
+                            <button class="add-btn"><a href="/order.html">Order</a></button>
                         </div>
                     </div>
                 </div>
@@ -109,7 +110,7 @@
                         <p>Fluffy pancakes with fresh blueberries and maple syrup</p>
                         <div class="menu-item-footer">
                             <span class="price">₹180</span>
-                            <button class="add-btn">Add to Order</button>
+                            <button class="add-btn"><a href="/order.html">Order</a></button>
                         </div>
                     </div>
                 </div>
@@ -122,7 +123,7 @@
                         <p>Buttery croissant with rich chocolate filling</p>
                         <div class="menu-item-footer">
                             <span class="price">₹110</span>
-                            <button class="add-btn">Add to Order</button>
+                            <button class="add-btn"><a href="/order.html">Order</a></button>
                         </div>
                     </div>
                 </div>
@@ -135,7 +136,7 @@
                         <p>Classic Italian dessert with coffee and mascarpone</p>
                         <div class="menu-item-footer">
                             <span class="price">₹150</span>
-                            <button class="add-btn">Add to Order</button>
+                            <button class="add-btn"><a href="/order.html">Order</a></button>
                         </div>
                     </div>
                 </div>
