adding photos and all

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/011548e2-5b8b-4217-ab17-3cfd219c0815.png"
+                    <img src="/img/menu/capachino.jpg"
                         alt="Cappuccino">
                     <div class="menu-item-content">
                         <h3>Cappuccino</h3>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fbd47caf-41ea-4f49-a9b6-b49f4eeeef59.png"
+                    <img src="/img/menu/latte.jpg"
                         alt="Latte">
                     <div class="menu-item-content">
                         <h3>Latte</h3>
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/aafca451-1204-4dae-999a-746bd228fa16.png"
+                    <img src="/img/menu/Avocado Toast.jpg"
                         alt="Avocado Toast">
                     <div class="menu-item-content">
                         <h3>Avocado Toast</h3>
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/7b32371a-e624-427f-a54b-2af7777366ad.png"
+                    <img src="/img/menu/Blueberry Pancakes.jpg"
                         alt="Blueberry Pancakes">
                     <div class="menu-item-content">
                         <h3>Blueberry Pancakes</h3>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/dc5743b2-32e5-4a9b-a007-c7a170a63a78.png"
+                    <img src="/img/menu/Chocolate Croissant.jpg"
                         alt="Chocolate Croissant">
                     <div class="menu-item-content">
                         <h3>Chocolate Croissant</h3>
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/33fbdd43-5921-4840-8495-3016f26ab756.png"
+                    <img src="/img/menu/Tiramisu.jpg"
                         alt="Tiramisu">
                     <div class="menu-item-content">
                         <h3>Tiramisu</h3>
@@ -176,7 +176,7 @@
             </div>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/d22a803b-a036-442b-86bb-a50d97e15edb.png"
+                    <img src="/img/restaurent.jpg"
                         alt="Barista preparing coffee">
                 </div>
                 <div class="about-text">
