--- a/order.html
+++ b/order.html
@@ -12,6 +12,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
+                    <img src="/img/hero-img.png" alt="">
                     <h1>Royal Café</h1>
                 </div>
                 <a href="/index.html" class="back-btn">← Back to Home</a>
