--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="/img/menu/capachino.jpg"
-                        alt="Cappuccino">
+                    <img src="/img/menu/capachino.jpg" alt="Cappuccino">
                     <div class="menu-item-content">
                         <h3>Cappuccino</h3>
                         <p>Rich espresso with steamed milk foam</p>
@@ -77,8 +76,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="/img/menu/latte.jpg"
-                        alt="Latte">
+                    <img src="/img/menu/latte.jpg" alt="Latte">
                     <div class="menu-item-content">
                         <h3>Latte</h3>
                         <p>Espresso with a lot of steamed milk</p>
@@ -90,8 +88,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="/img/menu/Avocado Toast.jpg"
-                        alt="Avocado Toast">
+                    <img src="/img/menu/Avocado Toast.jpg" alt="Avocado Toast">
                     <div class="menu-item-content">
                         <h3>Avocado Toast</h3>
                         <p>Sourdough bread with smashed avocado, cherry tomatoes</p>
@@ -103,8 +100,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="/img/menu/Blueberry Pancakes.jpg"
-                        alt="Blueberry Pancakes">
+                    <img src="/img/menu/Blueberry Pancakes.jpg" alt="Blueberry Pancakes">
                     <div class="menu-item-content">
                         <h3>Blueberry Pancakes</h3>
                         <p>Fluffy pancakes with fresh blueberries and maple syrup</p>
@@ -116,8 +112,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="/img/menu/Chocolate Croissant.jpg"
-                        alt="Chocolate Croissant">
+                    <img src="/img/menu/Chocolate Croissant.jpg" alt="Chocolate Croissant">
                     <div class="menu-item-content">
                         <h3>Chocolate Croissant</h3>
                         <p>Buttery croissant with rich chocolate filling</p>
@@ -129,8 +124,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <img src="/img/menu/Tiramisu.jpg"
-                        alt="Tiramisu">
+                    <img src="/img/menu/Tiramisu.jpg" alt="Tiramisu">
                     <div class="menu-item-content">
                         <h3>Tiramisu</h3>
                         <p>Classic Italian dessert with coffee and mascarpone</p>
@@ -176,8 +170,7 @@
             </div>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/img/restaurent.jpg"
-                        alt="Barista preparing coffee">
+                    <img src="/img/05.jpg" alt="Barista preparing coffee">
                 </div>
                 <div class="about-text">
                     <h3>Our Story</h3>
