--- a/order.html
+++ b/order.html
@@ -41,7 +41,7 @@
                 <div class="menu-grid">
                     <!-- Coffee Items -->
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=400&h=300&fit=crop" alt="Cappuccino">
+                        <img src="/img/menu/capachino.jpg" alt="Cappuccino">
                         <div class="menu-item-content">
                             <h3>Cappuccino</h3>
                             <p>Rich espresso with steamed milk foam and a touch of cinnamon</p>
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=400&h=300&fit=crop" alt="Latte">
+                        <img src="/img/menu/latte.jpg" alt="Latte">
                         <div class="menu-item-content">
                             <h3>Café Latte</h3>
                             <p>Espresso with steamed milk and beautiful latte art</p>
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1510707577719-ae7c14805e3a?w=400&h=300&fit=crop" alt="Americano">
+                        <img src="/img/menu/americano.jpg" alt="Americano">
                         <div class="menu-item-content">
                             <h3>Americano</h3>
                             <p>Bold espresso shots with hot water for a classic coffee experience</p>
@@ -93,7 +93,7 @@
 
                     <!-- Food Items -->
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1541519227354-08fa5d50c44d?w=400&h=300&fit=crop" alt="Avocado Toast">
+                        <img src="/img/menu/Avocado Toast.jpg" alt="Avocado Toast">
                         <div class="menu-item-content">
                             <h3>Avocado Toast</h3>
                             <p>Sourdough bread with smashed avocado, cherry tomatoes, and herbs</p>
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?w=400&h=300&fit=crop" alt="Pancakes">
+                        <img src="/img/menu/Blueberry Pancakes.jpg" alt="Pancakes">
                         <div class="menu-item-content">
                             <h3>Blueberry Pancakes</h3>
                             <p>Fluffy pancakes with fresh blueberries and maple syrup</p>
@@ -127,7 +127,7 @@
                     </div>
 
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1549007953-2f2dc0b24019?w=400&h=300&fit=crop" alt="Croissant">
+                        <img src="/img/menu/Chocolate Croissant.jpg" alt="Croissant">
                         <div class="menu-item-content">
                             <h3>Chocolate Croissant</h3>
                             <p>Buttery, flaky croissant with rich chocolate filling</p>
@@ -145,7 +145,7 @@
 
                     <!-- Desserts -->
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1571877227200-a0d98ea607e9?w=400&h=300&fit=crop" alt="Tiramisu">
+                        <img src="/img/menu/Tiramisu.jpg" alt="Tiramisu">
                         <div class="menu-item-content">
                             <h3>Tiramisu</h3>
                             <p>Classic Italian dessert with coffee-soaked ladyfingers and mascarpone</p>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="menu-item">
-                        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=400&h=300&fit=crop" alt="Cheesecake">
+                        <img src="/img/menu/New York Cheesecake.jpg" alt="Cheesecake">
                         <div class="menu-item-content">
                             <h3>New York Cheesecake</h3>
                             <p>Creamy cheesecake with graham cracker crust and berry compote</p>
