--- a/index.html
+++ b/index.html
@@ -68,10 +68,6 @@
                     <div class="menu-item-content">
                         <h3>Cappuccino</h3>
                         <p>Rich espresso with steamed milk foam</p>
-                        <div class="menu-item-footer">
-                            <span class="price">₹120</span>
-                            <button class="add-btn"><a href="/order.html">Order</a></button>
-                        </div>
                     </div>
                 </div>
 
@@ -80,10 +76,6 @@
                     <div class="menu-item-content">
                         <h3>Latte</h3>
                         <p>Espresso with a lot of steamed milk</p>
-                        <div class="menu-item-footer">
-                            <span class="price">₹140</span>
-                            <button class="add-btn"><a href="/order.html">Order</a></button>
-                        </div>
                     </div>
                 </div>
 
@@ -92,10 +84,6 @@
                     <div class="menu-item-content">
                         <h3>Avocado Toast</h3>
                         <p>Sourdough bread with smashed avocado, cherry tomatoes</p>
-                        <div class="menu-item-footer">
-                            <span class="price">₹220</span>
-                            <button class="add-btn"><a href="/order.html">Order</a></button>
-                        </div>
                     </div>
                 </div>
 
@@ -104,10 +92,6 @@
                     <div class="menu-item-content">
                         <h3>Blueberry Pancakes</h3>
                         <p>Fluffy pancakes with fresh blueberries and maple syrup</p>
-                        <div class="menu-item-footer">
-                            <span class="price">₹180</span>
-                            <button class="add-btn"><a href="/order.html">Order</a></button>
-                        </div>
                     </div>
                 </div>
 
@@ -116,10 +100,6 @@
                     <div class="menu-item-content">
                         <h3>Chocolate Croissant</h3>
                         <p>Buttery croissant with rich chocolate filling</p>
-                        <div class="menu-item-footer">
-                            <span class="price">₹110</span>
-                            <button class="add-btn"><a href="/order.html">Order</a></button>
-                        </div>
                     </div>
                 </div>
 
@@ -128,12 +108,11 @@
                     <div class="menu-item-content">
                         <h3>Tiramisu</h3>
                         <p>Classic Italian dessert with coffee and mascarpone</p>
-                        <div class="menu-item-footer">
-                            <span class="price">₹150</span>
-                            <button class="add-btn"><a href="/order.html">Order</a></button>
-                        </div>
                     </div>
                 </div>
+            </div>
+            <div class="menuorder">
+                <button>Order</button>
             </div>
         </div>
     </section>
