--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="menuorder">
-                <button>Order</button>
+                <button class="order-btn"><a href="/order.html">Order</a></button>
             </div>
         </div>
     </section>
