--- a/order/order.html
+++ b/order/order.html
@@ -45,8 +45,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/capachino.jpg" alt="Cappuccino">
                         <div class="menu-item-content">
-                            <h3>Cappuccino</h3>
-                            <p>Rich espresso with steamed milk foam and a touch of cinnamon</p>
+                            <h3 class="foodname">Cappuccino</h3>
+                            <p class="Description">Rich espresso with steamed milk foam and a touch of cinnamon</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹120</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -57,8 +57,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/latte.jpg" alt="Latte">
                         <div class="menu-item-content">
-                            <h3>Café Latte</h3>
-                            <p>Espresso with steamed milk and beautiful latte art</p>
+                            <h3 class="foodname">Café Latte</h3>
+                            <p class="Description">Espresso with steamed milk and beautiful latte art</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹140</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -69,8 +69,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/americano.jpg" alt="Americano">
                         <div class="menu-item-content">
-                            <h3>Americano</h3>
-                            <p>Bold espresso shots with hot water for a classic coffee experience</p>
+                            <h3 class="foodname">Americano</h3>
+                            <p class="Description">Bold espresso shots with hot water for a classic coffee experience</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹100</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -82,8 +82,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/Avocado Toast.jpg" alt="Avocado Toast">
                         <div class="menu-item-content">
-                            <h3>Avocado Toast</h3>
-                            <p>Sourdough bread with smashed avocado, cherry tomatoes, and herbs</p>
+                            <h3 class="foodname">Avocado Toast</h3>
+                            <p class="Description">Sourdough bread with smashed avocado, cherry tomatoes, and herbs</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹220</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -94,8 +94,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/Blueberry Pancakes.jpg" alt="Pancakes">
                         <div class="menu-item-content">
-                            <h3>Blueberry Pancakes</h3>
-                            <p>Fluffy pancakes with fresh blueberries and maple syrup</p>
+                            <h3 class="foodname">Blueberry Pancakes</h3>
+                            <p class="Description">Fluffy pancakes with fresh blueberries and maple syrup</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹180</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -106,8 +106,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/Chocolate Croissant.jpg" alt="Croissant">
                         <div class="menu-item-content">
-                            <h3>Chocolate Croissant</h3>
-                            <p>Buttery, flaky croissant with rich chocolate filling</p>
+                            <h3 class="foodname">Chocolate Croissant</h3>
+                            <p class="Description">Buttery, flaky croissant with rich chocolate filling</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹110</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -119,8 +119,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/Tiramisu.jpg" alt="Tiramisu">
                         <div class="menu-item-content">
-                            <h3>Tiramisu</h3>
-                            <p>Classic Italian dessert with coffee-soaked ladyfingers and mascarpone</p>
+                            <h3 class="foodname">Tiramisu</h3>
+                            <p class="Description">Classic Italian dessert with coffee-soaked ladyfingers and mascarpone</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹150</span>
                                 <button class="add-btn">Add to Cart</button>
@@ -131,8 +131,8 @@
                     <div class="menu-item">
                         <img src="/img/menu/New York Cheesecake.jpg" alt="Cheesecake">
                         <div class="menu-item-content">
-                            <h3>New York Cheesecake</h3>
-                            <p>Creamy cheesecake with graham cracker crust and berry compote</p>
+                            <h3 class="foodname">New York Cheesecake</h3>
+                            <p class="Description">Creamy cheesecake with graham cracker crust and berry compote</p>
                             <div class="menu-item-footer">
                                 <span class="price">₹170</span>
                                 <button class="add-btn">Add to Cart</button>
