--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="menuorder">
-                <button class="order-btn"><a href="/order/order.html">Order Online</a></button>
+                <button class="order-btn" onclick="checkk()"><a href="/order/order.html">Order Online</a></button>
             </div>
         </div>
     </section>
