--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="menuorder">
-                <button class="order-btn" onclick="checkk()"><a href="/order/order.html">Order Online</a></button>
+                <button class="order-btn" onclick="checkk()">Order Online</button>
             </div>
         </div>
     </section>
@@ -247,6 +247,7 @@
         </div>
     </section>
 
+    <script src="main.js"></script>
     <!-- swiper cdn -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="swiper.js"></script>
