--- a/order/order.html
+++ b/order/order.html
@@ -205,6 +205,7 @@
         </div>
     </div>
 
+    search : <input type="text" id="searchhh" oninput="searchhh()"> <br><br>
 
     <table border="1">
         <thead>
